Fixed whatsnew and related spacing

--- a/src/layouts/CommunityPageLayout/CommunityLayout.module.css
+++ b/src/layouts/CommunityPageLayout/CommunityLayout.module.css
@@ -996,14 +996,14 @@
     padding: 0px 14px 0px 16px;
     flex-direction: column;
     align-items: flex-end;
-    gap: 16px;
+    gap: 12px;
     align-self: stretch;
     transition: all 0.3s ease;
     animation: fadeDown 0.3s ease forwards;
   }
 
   .dropdowns-panel .parent-list .no-gap {
-    gap: 16px;
+    gap: 7px;
   }
   .dropdowns-panel .parent-list .no-padding {
     padding: 0;
@@ -1123,7 +1123,7 @@
     z-index: 2;
     background-color: white;
     padding: 8px 0 0 0;
-    /* position: relative; */
+    position: relative;
   }
   .community-header .top-margin-card {
     height: 0;
